   2. Areas and Rooms now support "atmosphere" to designate what players have available for breathing.
   3. Rooms "climate" is now an editable feature, usually inherited from the area Climate, but designatable at will.
   4. Races now designate what sort of resource they can breathe, which means GenRaces have a new field you can edit.
//TODO: manufacturers to all editors, makers, stats
//TODO: add electronics to guides
//TODO: add electronics to MG
//TODO: YahooMsgs! skip: 1885, 2881, 2953, 3274 test yahoo 100 times=100&command=copyamsg&journal=Announcements&user=bo_zimmerman&password=ez13942&url=http://games.groups.yahoo.com/group/coffeemud
# Build 5.8.0 Release 7/21/2013
   1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.
   ^^^Check out the altered WebServer guide, and make sure you integrate the pub. ini, admin.ini, and common.ini if you customized them.
   2. Character Classes now use formulas for mana, movement, and hit point gains/losses.
   3. Character Class race/stat requirements can now be modified separately from qualifications mask.  Race qualifications shown in help now.
   4. Changed the wysiwyg forum editor to one that's also chrome compatible (nicEdit)
   5. Generic Abilities will now import/export when races that use them export
   6. (Internal) New factions now default into /resources/factions -- legacy locations will work too though.
   7. New Channel flag (ACCOUNTOOC) to force account names instead of channel names into messages.
   8. (Internal) randomdata.xml now at /resources/randareas/example.xml -- update your random area files and random Areas!
   9. MUD Logging to separate files now has more options, such as rolling logs based on entries or bytes, etc.
  10. Web Forum system now supports participation by empty Accounts (if using the account system), and web subscribe/unsubscribe