@@ -278,6 +278,19 @@ Short(s) : \n\r\
 Lists all the channels available on the InterMud3 network, even those \
 which your mud does not subscribe to.
 
+JCONSOLE=\
+Command : JCONSOLE\n\r\
+Usage   : JCONSOLE [TOPICNAME]\n\r\
+Example : jconsole ([statement])\n\r\
+Short(s): \n\r\
+When entered with a statement, this command will execute the single javascript statement \
+and exit.  When entered alone, it will enter a console where the user can enter as many \
+javascript statements as they want, and the system will even remember any variables or \
+functions they've defined later one (does NOT survive reboots!).  All the Scriptable/MOBPROG \
+commands and functions are also available.  Lastly, for entering multi-line data, you can \
+enter multi line mode by entering < by itself, and exiting by entering > by itself.
+
+
 RESET_ROOM=RESET
 RESET_AREA=RESET
 RESET_REJUV=RESET
