@@ -3,10 +3,11 @@
    2. Areas and Rooms now support "atmosphere" to designate what players have available for breathing.
    3. Rooms "climate" is now an editable feature, usually inherited from the area Climate, but designatable at will.
    4. Races now designate what sort of resource they can breathe, which means GenRaces have a new field you can edit.
+   5. New Archon command: JCONSOLE, for playing around with javascript commands (and accessing your muds running systems!!)
 //TODO: manufacturers to all editors, makers, stats
 //TODO: add electronics to guides
 //TODO: add electronics to MG
-//TODO: YahooMsgs! skip: 1885, 2881, 2953, 3274 test yahoo 100 times=100&command=copyamsg&journal=Announcements&user=bo_zimmerman&password=ez13942&url=http://games.groups.yahoo.com/group/coffeemud
+//TODO: YahooMsgs! skip: 1885, 2881, 2953, 3274, 15908, 15914 test yahoo 100 times=100&command=copyamsg&journal=Announcements&user=bo_zimmerman&password=ez13942&url=http://games.groups.yahoo.com/group/coffeemud
 # Build 5.8.0 Release 7/21/2013
    1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.
    ^^^Check out the altered WebServer guide, and make sure you integrate the pub. ini, admin.ini, and common.ini if you customized them.
